RESOLVED FIXED60709
Assertion failure when requesting that storage be deleted for an origin without storage
https://bugs.webkit.org/show_bug.cgi?id=60709
Summary Assertion failure when requesting that storage be deleted for an origin witho...
Jessie Berlin
Reported 2011-05-12 10:52:00 PDT
ASSERTION FAILED: !path.isEmpty() /Volumes/Data/jessieberlin/src/Safari/OpenSource/Source/WebCore/storage/StorageTracker.cpp(458) : void WebCore::StorageTracker::syncDeleteOrigin(const WTF::String&) 1 WebCore::StorageTracker::syncDeleteOrigin(WTF::String const&) 2 WebCore::LocalStorageTask::performTask() 3 WebCore::LocalStorageThread::threadEntryPoint() 4 WebCore::LocalStorageThread::threadEntryPointCallback(void*) 5 WTF::threadEntryPoint(void*) 6 _pthread_start 7 thread_start
Attachments
Patch (1.60 KB, patch)
2011-05-12 11:07 PDT, Jessie Berlin
no flags
Anton D'Auria
Comment 1 2011-05-12 10:56:23 PDT
This assertion is too strict. Requesting StorageTracker to delete local storage for an origin that has no local storage is not a misuse of the API.
Jessie Berlin
Comment 2 2011-05-12 11:07:06 PDT
Jessie Berlin
Comment 3 2011-05-12 12:41:53 PDT
Comment on attachment 93308 [details] Patch Thanks for the review, Darin! Commited in http://trac.webkit.org/changeset/86371
WebKit Review Bot
Comment 4 2011-05-12 14:31:28 PDT
http://trac.webkit.org/changeset/86371 might have broken Leopard Intel Debug (Tests) The following tests are not passing: fast/lists/003-vertical.html fonts/cursive.html
Note You need to log in before you can comment on or make changes to this bug.