Assertion failure when requesting that storage be deleted for an origin without storage. https://bugs.webkit.org/show_bug.cgi?id=60709

Reviewed by Darin Adler.

* storage/StorageTracker.cpp:
(WebCore::StorageTracker::syncDeleteOrigin):
If the path to the storage location for the givin origin is empty, return early instead of
asserting.



Canonical link: https://commits.webkit.org/76028@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86371 268f45cc-cd09-0410-ab3c-d52691b4dbfc